config exception, response